# ArdanFfi

./: .gitignore  README.md
code/: Cargo.toml  Dockerfile
code/ex01_gentle_intro/: Cargo.toml
code/ex01_gentle_intro/src/: hello.c  main.rs
code/ex02_auto_header/: Cargo.toml  build.rs
code/ex02_auto_header/src/: hello.h  main.rs
code/ex03_rust_from_c/: Cargo.toml
code/ex03_rust_from_c/c/: build_linux.sh  build_mac.sh
code/ex03_rust_from_c/tmp/: .rustc_info.json
code/ex03a_rust_from_c_static/: Cargo.toml
code/ex03a_rust_from_c_static/c/: build_linux.sh  rust_from_c.c
code/ex03a_rust_from_c_static/src/: lib.rs
code/ex04_rust_headers/: Cargo.toml  build.rs  cbindgen.toml
code/ex04_rust_headers/src/: lib.rs
code/ex05_porting1/: Cargo.toml
code/ex05_porting1/src/: clib.h  lib.rs
code/ex06_porting2/: Cargo.toml
code/ex06_porting2/src/: lib.rs
code/ex07_porting3/: Cargo.toml
code/ex07_porting3/src/: clib.c  lib.rs
code/ex08_porting4/: Cargo.toml  build.rs
code/ex08_porting4/src/: clib.c  clib.h  lib.rs
code/ex09_cstruct1/: Cargo.toml
code/ex09_cstruct1/src/: clib.c  clib.h  lib.rs
code/ex10_cstruct2/: Cargo.toml
code/ex11_cstruct3/: Cargo.toml
code/ex12_cstruct_free/: Cargo.toml  build.rs
code/ex13_cstring1/: Cargo.toml
code/ex14_accidental_libs/: Cargo.toml
code/ex15_macros/: Cargo.toml
code/ex16_void/: Cargo.toml
code/ex17_union/: Cargo.toml
code/ex18_rust_slice/: Cargo.toml
code/ex19_rust_slice_struct/: Cargo.toml
code/ex20_rust_concurency/: Cargo.toml
code/ex21_async/: Cargo.toml
code/src/: main.rs
(+94 files in other folders)
